<resources>
    <string name="app_name">myCalc</string>
    <string name="percent">%</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="division">/</string>
    <string name="multiplication">X</string>
    <string name="equals">=</string>
    <string name="point">.</string>
    <string name="clear">C</string>
    <string name="minusorplus">+/-</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eigth">8</string>
    <string name="nine">9</string>

</resources>
