<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:gravity="right"
            android:textSize="50dp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/grey"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="40dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/grey"
                android:text="@string/minusorplus"
                android:textColor="@color/white"
                android:textSize="40dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/grey"
                android:text="@string/percent"
                android:textColor="@color/white"
                android:textSize="40dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/grey"
                android:text="@string/division"
                android:textColor="@color/white"
                android:textSize="40dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/orange"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="40dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/orange"
                android:text="@string/eigth"
                android:textColor="@color/white"
                android:textSize="40dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/orange"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="40dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/grey"
                android:text="@string/multiplication"
                android:textColor="@color/white"
                android:textSize="40dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/orange"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="40dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/orange"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="40dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/orange"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="40dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/grey"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="40dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/orange"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="40dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/orange"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="40dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/orange"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="40dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/grey"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="40dp"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginBottom="3dp">
            <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="@color/orange"
            android:layout_weight="3"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="40dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="@color/orange"
                android:layout_weight="3"
                android:text="@string/point"
                android:textColor="@color/white"
                android:textSize="40dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_margin="1dp"
                android:background="@color/grey"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="40dp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>